<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".dash"
    android:background="@color/primaryTextColor">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dash_title"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:textColor="#FFFFFF"
                android:textSize="25sp" />

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_alignParentEnd="true"
                android:contentDescription="@string/todo"
                android:src="@drawable/prof" />

        </RelativeLayout>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:rowCount="2"
            android:layout_marginTop="25dp"
            android:columnCount="2"
            android:alignmentMode="alignMargins"
            android:columnOrderPreserved="false">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/dash_viewcar"
                android:layout_columnWeight="1"
                app:cardElevation="2dp"
                app:cardCornerRadius="10dp"
                android:layout_margin="12dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="160dp"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:contentDescription="@string/todo"
                        android:src="@drawable/car" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:text="@string/view_car"
                        android:textColor="#000000"
                        android:textSize="18sp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:id="@+id/dash_emer_mode"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                app:cardElevation="2dp"
                app:cardCornerRadius="10dp"
                android:layout_margin="12dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="160dp"
                    android:gravity="center"
                    android:padding="18dp"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:src="@drawable/alarm"
                        android:contentDescription="@string/todo" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="15sp"
                        android:textAlignment="center"
                        android:text="Emergency \n Mode"
                        android:textColor="#000000"
                        android:layout_marginTop="12dp"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:id="@+id/dash_maps"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                app:cardElevation="2dp"
                app:cardCornerRadius="10dp"
                android:layout_margin="12dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="160dp"
                    android:gravity="center"
                    android:padding="16dp"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:src="@drawable/track"
                        android:contentDescription="@string/todo" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:textAlignment="center"
                        android:textColor="#000000"
                        android:text="Find my\nCar"
                        android:layout_marginTop="12dp"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/bcam"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                app:cardElevation="2dp"
                app:cardCornerRadius="10dp"
                android:layout_margin="12dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="160dp"
                    android:gravity="center"
                    android:padding="16dp"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:contentDescription="@string/todo"
                        android:src="@drawable/share" />

                    <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textAlignment="center"
                    android:textColor="#000000"
                    android:text="@string/share"
                    android:layout_marginTop="12dp"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </GridLayout>
        <LinearLayout
            style="@style/parent"
            android:background="@drawable/login_shape_bk"
            android:orientation="vertical"
            android:layout_weight="3"
            android:layout_height="0dp"
            android:layout_width="match_parent">

            <ImageView
                style="@style/parent"
                android:layout_height="match_parent"
                android:background="@drawable/ic_dash_bk"
                android:contentDescription="@string/login_background" />

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>