<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".view_car">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="250dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@drawable/view__backgorund"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="40dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/prof2" />

            <TextView
                android:id="@+id/vname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="name"
                android:textColor="#ffffff"
                android:textSize="20sp" />

        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="350dp"
            android:layout_height="90dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="155dp"
            android:elevation="2sp"
            android:background="@drawable/rounded_edittext">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="3"
                android:baselineAligned="false">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/o_d_o"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/vodo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="10dp"
                        android:text="0000"
                        android:textColor="@color/primaryTextColor"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Capacity"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/vcap"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="10dp"
                        android:text="000"
                        android:textColor="@color/primaryTextColor"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/time"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/vtime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="10dp"
                        android:text="000"
                        android:textColor="@color/primaryTextColor"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </LinearLayout>
            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/vmdl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/mdel"
            android:gravity="center"
            android:paddingStart="10sp"
            android:text="Model Number"
            android:textColor="#000000"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/vreg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/reg"
            android:gravity="center"
            android:paddingStart="10sp"
            android:text="Your Number"
            android:textColor="#000000"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/vmilage"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:drawableStart="@drawable/icons8_odometer_100"
            android:gravity="center"
            android:paddingStart="10sp"
            android:text="Mileage"
            android:textColor="#000000"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/veng"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:drawableStart="@drawable/enginie"
            android:gravity="center"
            android:paddingStart="10sp"
            android:text="Engine"
            android:textColor="#000000"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/vfuel"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:drawableStart="@drawable/fuel"
            android:gravity="center"
            android:paddingStart="10sp"
            android:text="Fuel type"
            android:textColor="#000000"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/vpwr"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:drawableStart="@drawable/hp"
            android:gravity="center"
            android:paddingStart="10sp"
            android:text="Power"
            android:textColor="#000000"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/vage"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:drawableStart="@drawable/age"
            android:gravity="center"
            android:paddingStart="10sp"
            android:text="Age"
            android:textColor="#000000"
            android:textSize="15sp" />

    </LinearLayout>

</LinearLayout>